syntax = "proto3";

option csharp_namespace = "GigaStore";

service Propagate {
  rpc PropagateServers (PropagateRequest) returns (PropagateReply);
  rpc LockServers (LockRequest) returns (LockReply);

  rpc PropagateServersAdvanced (PropagateRequest) returns (PropagateReply);
  rpc ChangeMaster (ChangeRequest) returns (ChangeReply);
  rpc ChangeMasterNotification (ChangeNotificationRequest) returns (ChangeReply);

  rpc ReplicatePartition (stream ReplicateRequest) returns (ReplicateReply);

  rpc CheckStatusServers (CheckServersRequest) returns (CheckServersReply);
}


message PropagateRequest {
	int32 partition_id = 1;
	int32 object_id = 2;
	string value = 3;
}

message PropagateReply {
	
}

message LockRequest {
	int32 partition_id = 1;
	int32 object_id = 2;
}

message LockReply {

}

message ChangeRequest {
	int32 server_id = 1;
}

message ChangeNotificationRequest {
	int32 server_id = 1;
	int32 new_server_id = 2;
}

message ChangeReply {

}

message ReplicateReply {
}

message ReplicateRequest {
	int32 partition_id = 1;
	int32 object_id = 2;
	string value = 3;
}

message CheckServersRequest {

}

message CheckServersReply {

}